# CroakGnome

./: CHANGELOG.md  README.md  meson.build
data/: audiosession.glade  croakgnome.gresource.xml  mainwindow.glade  mainwindow2.glade
src/: croakgnome.cpp  meson.build
src/common/: AudioController.cpp  AudioController.hpp
src/ui/: App.cpp  App.hpp  AudioSessionWidget.cpp  AudioSessionWidget.hpp  MainWindow.cpp  MainWindow.hpp
